# logflow

./: README.md  setup.cfg  setup.py
.github/workflows/: main.yml
logflow/: __init__.py  cli.py  config_handler.py  log_decorator.py
tests/: test_cli.py  test_decorator.py
