[metadata]
# This includes the same information as in setup.py, but it's kept here for convenience.
name = logflow
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A logging tool for data engineers
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/logflow
project_urls =
    Bug Tracker = https://github.com/yourusername/logflow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    # Example: requests>=2.24.0
